cambios en la fuente
Usando google fonts

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ and open the template in the editor.
     Author     : Victor
 */
 
+*{
+    font-family: 'Nunito', sans-serif;
+}
+
 .margen-inf-20{
     
     margin-bottom: 20px;
