--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ and open the template in the editor.
     font-family: 'Nunito', sans-serif;
 }
 
-.menu{
+.navbar-default{
     background-color: #E8EAF6;
 }
 
