--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,21 @@ and open the template in the editor.
     Created on : 02-01-2015, 20:09:57
     Author     : Victor
 */
+body {
+    background: url(../img/agenda.png) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 
 *{
     font-family: 'Nunito', sans-serif;
 }
 
 .navbar-default{
-    background-color: #E8EAF6;
+    background-color: #E0F2F1;
 }
 
 .margen-inf-20{
