--- a/css/style_user.css
+++ b/css/style_user.css
@@ -7,12 +7,18 @@ and open the template in the editor.
     Created on : 02-01-2015, 20:09:57
     Author     : Victor
 */
+body { padding-top: 70px; }
+
 body {
     background: url(../img/agenda.png) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+.iframe{
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -35,18 +41,19 @@ color: #000;
    position:fixed;
    left:0px;
    bottom:0px;
-   height:3em;
+   height:2.1em;
    width:100%;
    background-color: #2196F3;
 }
 #footer >  p {
     color: whitesmoke;
-    margin-top: 1em;
-    font-size: 1em;
+    margin-top: .7em;
+    font-size: .7em;
 }
 .navbar{
     border: #1976D2;
     border-radius: 0px;
+    box-shadow: 0 1px 5px #999;
 }
 .navbar-default{
     background-color: #2196F3;
@@ -109,4 +116,25 @@ border-color: #2e6da4;
     margin-top: -20px;
     
     
+}
+.contenedor{
+    
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.jumbotron {
+    box-shadow: 0 1px 5px #999;
+}
+.fixed {
+    position: fixed;
+}
+.navbar-fixed-left{
+    position: fixed;
+    z-index: 999;
+}
+.marcador {
+    height: 70px;
+    margin-top: -70px;
+    width: 100%;
+    position: absolute;
 }
