--- a/css/style_user.css
+++ b/css/style_user.css
@@ -23,7 +23,7 @@ body {
 
 
 *{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Source Sans Pro', 'Nunito', sans-serif;
 }
 
 .display-block{
