--- a/css/style_user.css
+++ b/css/style_user.css
@@ -23,7 +23,7 @@ body {
 
 
 *{
-    font-family: 'Source Sans Pro', 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 
 .display-block{
@@ -119,8 +119,6 @@ border-color: #2e6da4;
 }
 .contenedor{
     
-    padding-left: 30px;
-    padding-right: 30px;
 }
 .jumbotron {
     box-shadow: 0 1px 5px #999;
