--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 
 
 *{
-    font-family: 'Nunito', sans-serif;
+    font-family:'Titillium Web', 'Poiret One', 'Nunito', sans-serif;
     box-sizing: border-box;
 }
 
@@ -77,7 +77,7 @@ body {
     text-align: center;
     font-size: 6em;
     font-weight: 200;
-    font-family: "Segoe UI";
+    font-family:'Titillium Web', 'Poiret One',"Segoe UI";
 }
 .logo span{
     font-size: 14pt;
@@ -88,4 +88,10 @@ body {
     top: 0;
     width: 100%;
     box-shadow: 0 1px 5px #999;
+}
+.jumbotron{
+    box-shadow: 0 2px 5px #999;
+}
+.well{
+    box-shadow: 0 1px 5px #999 inset;
 }
