--- a/css/style_user.css
+++ b/css/style_user.css
@@ -23,7 +23,7 @@ body {
 
 
 *{
-    font-family: 'Nunito', sans-serif;
+   font-family:'Titillium Web', 'Poiret One', 'Nunito', sans-serif;
 }
 
 .display-block{
@@ -44,6 +44,7 @@ color: #000;
    height:2.1em;
    width:100%;
    background-color: #2196F3;
+   box-shadow: 0 1px 5px #999;
 }
 #footer >  p {
     color: whitesmoke;
@@ -138,4 +139,12 @@ border-color: #2e6da4;
     margin-top: -70px;
     width: 100%;
     position: absolute;
+}
+textarea{
+    min-height: 200px;
+    height: 200px;
+    max-height: 200px;
+    max-width: 100%;
+    min-width: 100%;
+    width: 100%;
 }
