--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,55 @@ body {
     position: relative;
     max-width: 100%;
 }
+.logo > h1{
+    margin: 0px;
+    padding: 0px;
+    
+}
+.logo {
+     /* Location of the image */
+    background-image: url(../img/fondo.jpg);
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+  
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
+}
+.intro > p{
+    font-size: .2em;
+}
+.btn-intro
+{
+    font-size: 1.5em;
+    padding: .5em;
+    border: 1px solid #dcdcdc;
+    border-radius: .5em ;
+    color: #dcdcdc;
+    text-decoration: none;
+    cursor: pointer;
+}
+.btn-intro:hover{
+    border: 1px solid #0078e7;
+    color: #0078e7;
+    text-decoration: none;
+}
+.bajar {
+    font-size: .2em;
+    position: absolute;
+    left:0px;
+    bottom:0px;
+    width:100%;
+}
+
